fixed dashboard spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -74,7 +74,7 @@
   padding: 10px 15px;
 }
 .btn-turqoise-filled:hover {
-  background-color: $purple;
+  background-color: $turqoise;
   color: white;
   border: 1px solid white;
   text-decoration: none;
